# detrim

./: .cspell.config.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  justfile
.github/workflows/: ci.yml  coverage.yml  lint.yml
src/: cow_str.rs  hashset_string.rs  lib.rs  string.rs  string_non_empty.rs  vec_string.rs
