[package]
name = "detrim"
version = "0.1.0"
authors = ["Rob Ede <robjtede@icloud.com>"]
description = "The double-int format represents an integer that can be stored in an IEEE 754 double-precision number without loss of precision"
categories = ["encoding", "no-std", "no-std::no-alloc"]
keywords = ["serde", "utilities", "deserialization"]
repository = "https://github.com/x52dev/detrim"
license = "MIT OR Apache-2.0"
edition = "2018"
rust-version = "1.56.1"

[dependencies]
serde = { version = "1", default-features = false }

[dev-dependencies]
serde = { version = "1", features = ["std", "derive"] }
serde_json = "1"

[lints.rust]
rust_2018_idioms = "deny"
nonstandard_style = "deny"
future_incompatible = "deny"
