[package]
name = "detrim"
version = "0.1.3"
authors = ["Rob Ede <robjtede@icloud.com>"]
description = "String deserializers customization for serde"
categories = ["encoding", "no-std"]
keywords = ["deserialization", "utilities", "serde"]
repository = "https://github.com/x52dev/detrim"
license = "MIT OR Apache-2.0"
edition = "2018"
rust-version = "1.56.1"
exclude = [".*", "justfile", "flake.*"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = []

[dependencies]
serde = { version = "1", default-features = false, features = ["alloc"] }

[dev-dependencies]
serde = { version = "1", features = ["std", "derive"] }
serde_json = "1"

[lints.rust]
rust_2018_idioms = "deny"
nonstandard_style = "deny"
future_incompatible = "deny"
missing_docs = { level = "warn", priority = -1 }
